# proof

./: .gitignore  BENCHMARK.md  CHANGELOG.md  GUIDE.md  NPM-PUBLISH.md  README.md  STATUS.md  bunfig.toml  index.html  install.ps1  install.sh  mental-model.md  mockup.html  package.json  tsconfig.json
.github/workflows/: release.yml  test-release.yml
docs/: README.md  cli.md  typescript.md
homebrew/: proof.rb
install/: README.md  install.ps1  install.sh
scripts/: build.ts
sdks/: CONTRIBUTING.md  PLAN.md  README.md
sdks/python/: .gitignore  README.md  pyproject.toml
sdks/python/proof/: __init__.py
sdks/python/tests/: test_proof.py
skills/: README.md
skills/proof/: SKILL.md
skills/proof/references/: cli.md  go.md  python.md  typescript.md
src/: cli.test.ts  cli.ts  detect.test.ts  detect.ts  duration.ts  index.test.ts  index.ts  report.ts  types.ts
src/modes/: output.ts  simulator-android.ts  simulator-ios.ts  simulator.ts  terminal-video.ts  terminal.ts  touch-overlay.ts  visual.ts  xcresult.ts
test-app/: capture-proof.ts  showcase.ts
test-app/cli/: app.test.ts  app.ts
test-app/evidence/20260311-005912/: cli-tests.txt  web-payment.webm
test-app/ios/ProofTestApp/ProofTestApp/: ContentView.swift  ProofTestAppApp.swift
test-app/ios/ProofTestApp/ProofTestApp.xcodeproj/: project.pbxproj
test-app/ios/ProofTestApp/ProofTestAppUITests/: ProofTapLogger.swift  ProofTestAppUITests.swift
test-app/web/: index.html  orders.spec.ts  playwright.config.ts
