[project]
name = "automaze-proof"
version = "0.20260313.0"
description = "Capture visual evidence of test execution"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
license = "Apache-2.0"
authors = [
    { name = "Ran Aroussi", email = "opensource@automaze.io" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/automazeio/proof"
Repository = "https://github.com/automazeio/proof"
Issues = "https://github.com/automazeio/proof/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["proof*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
